<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true">

    <ImageView
        android:id="@+id/FinancialAidImage"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/DFAP_Financial_Aid_Image" />

    <TextView
        android:id="@+id/FinancialAidName"
        android:layout_toEndOf="@+id/FinancialAidImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginEnd="10dp"
        android:text="@string/DFAP_Financial_Aid_Name" />

    <TextView
        android:id="@+id/FinancialAidAmount"
        android:layout_toEndOf="@+id/FinancialAidImage"
        android:layout_below="@+id/FinancialAidName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/DFAP_Financial_Aid_Amount" />

    <TextView
        android:id="@+id/FinancialAidSlots"
        android:layout_toEndOf="@+id/FinancialAidImage"
        android:layout_below="@+id/FinancialAidAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/DFAP_Financial_Aid_Slots" />

    <TextView
        android:id="@+id/FinancialAidDateline"
        android:layout_toEndOf="@id/FinancialAidImage"
        android:layout_below="@id/FinancialAidSlots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:text="@string/DFAP_Financial_Aid_Dateline" />

</RelativeLayout>