<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/PASS_shortform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_pass"
        android:textAlignment="center"
        android:textColor="#014565"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.246" />

    <TextView
        android:id="@+id/PASS_longform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_prosperity_assistance_and_support_service"
        android:textAlignment="center"
        android:textColor="#014565"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PASS_shortform"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/DFAP"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#014565"
        android:onClick="navigationFromHomepageToDFAP"
        android:text="@string/homepage_direct_financial_aid_platform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PASS_longform" />

    <Button
        android:id="@+id/FMT"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#014565"
        android:onClick="navigationFromHomepageToFMT"
        android:text="@string/homepage_finance_management_tools"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DFAP"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/FBSL"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:backgroundTint="#014565"
        android:text="@string/homepage_food_bank_and_shelter_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/FMT"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>