<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">

    <TextView
        android:id="@+id/financial_management_tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/FinancialDashboard_FinancialManagementTools"
        android:textColor="#014565"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/border8dpblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/financial_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/FMT_Financial_Dashboard"
        android:textColor="#014565"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/expenses_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="148dp"
        android:text="@string/FMT_Expenses"
        android:textColor="#014565"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/financial_dashboard" />

    <TextView
        android:id="@+id/income_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="20dp"
        android:text="@string/FMT_Income"
        android:textColor="#014565"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expenses_label" />

    <TextView
        android:id="@+id/expenses_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/RM0"
        android:textAlignment="textEnd"
        android:textColor="#014565"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/expenses_label"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/income_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/RM0"
        android:textAlignment="textEnd"
        android:textColor="#014565"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/income_label"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.762"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <TextView
        android:id="@+id/net_profit_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="20dp"
        android:text="@string/FMT_Net_Profit"
        android:textColor="#014565"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/income_label" />

    <TextView
        android:id="@+id/net_profit_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:text="@string/RM0"
        android:textAlignment="textEnd"
        android:textColor="#014565"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/net_profit_label"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.687"
        app:layout_constraintStart_toStartOf="@+id/view" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/financial_dashboard" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="648dp"
        android:text="@string/Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>