<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".P5_ConfirmationDFAP"
    android:background="@drawable/background_image">

    <View
        android:id="@+id/view3Unclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.4"
        android:background="@drawable/transparent_background_80pc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ConfirmationDFAP_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#014565"
        android:text="@string/Direct_Financial_Aid_Platform"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3Unclear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091"
        app:layout_editor_absoluteY="81dp"/>

    <TextView
        android:id="@+id/ConfirmationDFAP_Question"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#014565"
        android:fontFamily="sans-serif-black"
        android:text="@string/DFAP_Question_do_you_wish_to_apply_nfor_the_financial_aid"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="@+id/view3Unclear"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/view3Unclear"
        app:layout_constraintTop_toTopOf="@+id/ConfirmationDFAP_Title"
        app:layout_constraintVertical_bias="0.688" />

    <View
        android:id="@+id/view5"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/view_014565_colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/view3Unclear"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/view3Unclear"
        app:layout_constraintTop_toTopOf="@+id/view3Unclear"
        app:layout_constraintVertical_bias="0.085" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/DFAP_Yes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view3Unclear"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:onClick="navigationFromConfirmationToDFAP"
        android:text="@string/DFAP_No"
        app:layout_constraintBottom_toBottomOf="@+id/view5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/view3Unclear"
        app:layout_constraintTop_toBottomOf="@+id/yesButton"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>